RESOLVED FIXED 211620
Incorrect image srcset candidate chosen for <img> cloned from <template>
https://bugs.webkit.org/show_bug.cgi?id=211620
Summary Incorrect image srcset candidate chosen for <img> cloned from <template>
Javan Makhmali
Reported 2020-05-08 03:08:16 PDT
Created attachment 398848 [details] Minimal test case To reproduce: Open the attached template-img-srcset.html file in Safari on a 2x DPR or higher display. Expected: Both images load the same URL. Actual: The first image loads the correct URL. The second image (cloned from a <template>) incorrectly loads the first URL from its srcset.
Attachments
Minimal test case (833 bytes, text/html)
2020-05-08 03:08 PDT, Javan Makhmali
no flags
Screenshot of test case (87.37 KB, image/png)
2020-05-08 03:09 PDT, Javan Makhmali
no flags
Browser comparison (252.26 KB, image/png)
2020-05-08 03:58 PDT, Javan Makhmali
no flags
Javan Makhmali
Comment 1 2020-05-08 03:09:11 PDT
Created attachment 398849 [details] Screenshot of test case
Javan Makhmali
Comment 2 2020-05-08 03:58:25 PDT
Created attachment 398853 [details] Browser comparison Does not occur in Firefox or Chrome (top). Does occur in Safari and Safari Technology Preview (bottom).
Radar WebKit Bug Importer
Comment 3 2020-05-08 15:45:11 PDT
Ahmad Saleem
Comment 4 2022-08-29 08:05:20 PDT
I am able to reproduce this bug in Safari Technology Preview 152 and Safari 15.6.1 on macOS 12.5.1 using attached test case and it shows "2x" and "1x" while all other browsers show "2x" and "2x". Weirdly. on iOS 15.6.1 on iPhone 13 Pro Max, it shows "3x" and "1x". Just wanted to share latest testing results. Thanks!
Ryosuke Niwa
Comment 5 2022-08-31 11:27:12 PDT
Anthony Ricaud
Comment 6 2022-09-05 11:00:32 PDT
Based on a Twitter conversation, I've opened bug 244815. This seems very similar.
Ryosuke Niwa
Comment 7 2022-09-10 14:45:44 PDT
*** Bug 244815 has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 8 2022-09-10 15:00:44 PDT
EWS
Comment 9 2022-09-10 21:17:32 PDT
Committed 254361@main (ebdff21ed516): <https://commits.webkit.org/254361@main> Reviewed commits have been landed. Closing PR #4228 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.