Incorrect image srcset candidate chosen for <img> cloned from <template> https://bugs.webkit.org/show_bug.cgi?id=211620

Reviewed by NOBODY (OOPS!).

The bug was caused by HTMLImageElement not updating its image candidate selection
upon getting adopted into a document from a template content document.

Fix the bug by calling selectImageSource instead of just m_imageLoader->updateFromElement.

* LayoutTests/fast/images/hidpi-img-cloned-from-template-expected.html: Added.
* LayoutTests/fast/images/hidpi-img-cloned-from-template.html: Added.
* Source/WebCore/html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::insertedIntoAncestor):